cabal-version:       2.4

name:                reflex-firebase
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Joseph Betz
maintainer:          joebetz91@gmail.com
category:            Database
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    Reflex.Firebase
  build-depends:
      base
    , microlens
    , reflex
    , reflex-dom-core
    , text
  hs-source-dirs:      src
  default-language:    Haskell2010
