cabal-version:       2.2

name:                reflex-firebase
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Joseph Betz
maintainer:          joebetz91@gmail.com
category:            Database
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    Reflex.Firebase
  build-depends:
      base
    , aeson
    , ghcjs-dom
    , jsaddle
    , lens
    , mtl
    , reflex
    , reflex-dom-core
    , text
  hs-source-dirs:      src
  default-language:    Haskell2010
